feat : TrendController 구현 및 스웨거 문서 작성"